--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,8 +36,8 @@
 	</pre>
 	<details>
     <summary>メニュー</summary>
-　　　 <a href="http://localhost:8080/">編集画面</a>
-　　　 <a href="http://localhost:8080/view">ブログページ</a>
+　　　 <a href="http://localhost:8080/">編集</a>
+　　　 <a href="http://localhost:8080/view">ホーム</a>
 　　 　</details>
 	<br>
 	<br>
