--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 <img src="img/web.jpg"  width="700" height="350" >
 	
 	<table >
-	<form method="post" action="/"　th:object="${formModel}">
+	<form method="post" action="/home"　th:object="${formModel}">
 	
 	<tr><td><label for="title">タイトル</label></td>
 	<td><input type="text" name="title" th:value="*{title}"></input></td></tr>
@@ -42,7 +42,6 @@
 	<br>
 	<br>
 	<table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d438_f6_022/5cf6184c7dccf/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center" style="font-size:xx-small"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table>
-    
     
 </body>
 </html>
