--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -47,5 +47,8 @@
 	<table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d438_f6_022/5cf6184c7dccf/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center" style="font-size:xx-small"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table>
 	</div>
 	</div>
+	<h1>Welcome!</h1>
+
+        <p>Click <a th:href="@{/}">here</a> to see a greeting.</p>
 </body>
 </html>
