--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>top page</title>
@@ -6,49 +6,50 @@
 		content="text/html; charset=UTF-8" />
 	<LINK REL="stylesheet" TYPE="text/css" HREF="/view/css/blog.css"></LINK>
 </head>
-<body bgcolor="#CCFFFF">
-<div id="site">
+<body bgcolor="#f0fff0"> 
+<div id="site" >
+<div id="f">
+        <a th:href="@{/create}">ログイン</a>
+        </div>
 <div id="a">
-    <h1>ブログ</h1>
-	<img src="view/img/website2.png"   width="100%" height="60%" >
+     <br>
+	 <a href="http://localhost:8080/home"><img src="img/website3.png"   width="100%" height="60%" ></a>
 	</div>
-	<br>
-	<br>
-	<br>
+	<div id="c" >
+<table border="black"; >
+　　　<tr><td> <a href="http://localhost:8080/home">TOP</a></td>
+<td background="white";><a href="http://localhost:8080/create">編集</a></td></tr>
+</table>
+    </div>
+    <br>
+    <br>
 <div id="b">
-　　　<pre th:each="obj:${datalist}">
-	<p style="font-size:30px;" th:text="${obj.title}"></p>
+　　　<pre th:object="${formModel}" th:value="*{id}">
+	<p style="font-size:30px;" th:text="*{title}"></p>
 	<hr>
-	<p th:text="${obj.memo}"></p>
+	<p th:text="*{memo}"></p>
 	<br>
-	<p style="font-size:10px; text-align: right" th:text="${obj.date}" ></p>
+	<p style="font-size:10px; text-align: right" th:text="*{date}" ></p>
+	<br>
 	<br>
 	</pre>
 	</div>
 	<div id="e">
-	<a>最新記事</a>
-	<table>
+	<p2>最新記事</p2>
+	<hr>
+	<table text-align="left">
 	<tr th:each="obj:${datalist}">
-	<td><a th:href="@{'/view/'+${obj.id}}"  th:text="${obj.title}">????</a></td>
+	<td><p2><a th:href="@{'/view/'+${obj.id}}"  th:text="${obj.title}">????</a></p2></td>
 	</tr>
 	</table>
 	</div>
-	<div id="c" >
-	<details>
-    <summary>メニュー</summary>
-　　　<a href="http://localhost:8080/">編集画面</a>
-　  　 <a href="http://localhost:8080/view">ブログページ</a>
-　　 　</details>
-    </div>
+    
     <br>
     <br>
-    <hr>
     <div id="d">
-	<table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d438_f6_022/5cf6184c7dccf/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center" style="font-size:xx-small"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table>
+    <hr>
+	<table border="0" cellspacing="0" cellpadding="0"><tr><td valign="bottom"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d438_f6_022/5cf6184c7dccf/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center" style="font-size:xx-small"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table>
 	</div>
-	</div>
-	<h1>Welcome!</h1>
-
-        <p>Click <a th:href="@{/}">here</a> to see a greeting.</p>
+	
 </body>
 </html>
