--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,25 +7,33 @@
 	<LINK REL="stylesheet" TYPE="text/css" HREF="/view/css/blog.css"></LINK>
 </head>
 <body bgcolor="#f0fff0"> 
-<div id="site" >
+<div id="site">
+
+
 <div id="f">
         <a th:href="@{/create}">ログイン</a>
         </div>
+        
+        
 <div id="a">
      <br>
 	 <a href="http://localhost:8080/home"><img src="view/img/website3.png"   width="100%" height="60%" ></a>
 	</div>
+	
+	
 	<div id="c" >
-<table border="black"; >
+<table>
 　　　<tr><td> <a href="http://localhost:8080/home">TOP</a></td>
-<td background="white";><a href="http://localhost:8080/create">編集</a></td></tr>
+<td background="white"><a href="http://localhost:8080/create">編集</a></td></tr>
 </table>
     </div>
     <br>
     <br>
+    
+    
 <div id="b">
 　　　<pre th:each="obj:${datalist}">
-	<p style="font-size:30px;" th:text="${obj.title}"></p>
+	<div align="left"><b style="font-size:30px" th:text="${obj.title}"></b></div>
 	<hr>
 	<p th:text="${obj.memo}"></p>
 	<br>
@@ -33,22 +41,25 @@
 	<br>
 	</pre>
 	</div>
+	
+	
 	<div id="e">
 	<p2>最新記事</p2>
 	<hr>
-	<table text-align="left">
+	<table align="left">
 	<tr th:each="obj:${datalist}">
 	<td><p2><a th:href="@{'/view/'+${obj.id}}"  th:text="${obj.title}">????</a></p2></td>
 	</tr>
 	</table>
 	</div>
+    <br>
+    <br>
     
-    <br>
-    <br>
+    
     <div id="d">
     <hr>
 	<table border="0" cellspacing="0" cellpadding="0"><tr><td valign="bottom"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d438_f6_022/5cf6184c7dccf/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center" style="font-size:xx-small"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table>
 	</div>
-	
+	</div>
 </body>
 </html>
